--- a/angular.json
+++ b/angular.json
@@ -71,6 +71,12 @@
             "production": {
               "browserTarget": "pouyanaClient:build:production"
             },
+            "options": {
+              "browserTarget": "pouyanaClient:build",
+              "sslKey": "./ssl/server.key",
+              "sslCert": "./ssl/server.crt",
+              "ssl": true
+            },
             "development": {
               "browserTarget": "pouyanaClient:build:development"
             }
@@ -103,5 +109,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "35b1df32-17d2-4f01-af3a-20a061e3cf6e"
   }
 }
