--- a/package.json
+++ b/package.json
@@ -10,32 +10,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
-    "@fortawesome/fontawesome-free": "^6.5.1",
-    "bootstrap": "^5.3.2",
-    "ngx-bootstrap": "^11.0.2",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "~14.2.9",
+    "@angular/cdk": "^14.2.6",
+    "@angular/common": "~14.2.9",
+    "@angular/compiler": "~14.2.9",
+    "@angular/core": "~14.2.9",
+    "@angular/forms": "~14.2.9",
+    "@angular/material": "^14.2.6",
+    "@angular/platform-browser": "~14.2.9",
+    "@angular/platform-browser-dynamic": "~14.2.9",
+    "@angular/router": "~14.2.9",
+    "@fortawesome/fontawesome-free": "^6.2.0",
+    "bootstrap": "^5.2.2",
+    "jalali-moment": "^3.3.11",
+    "ngx-bootstrap": "^9.0.0",
+    "ngx-spinner": "^14.0.0",
+    "ngx-toastr": "^15.2.1",
+    "rxjs": "~7.5.7",
+    "tslib": "^2.4.1",
+    "uuid": "^9.0.0",
+    "xng-breadcrumb": "^8.0.2",
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.13",
-    "@angular/cli": "~14.2.13",
-    "@angular/compiler-cli": "^14.2.0",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.3.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "@angular-devkit/build-angular": "~14.2.8",
+    "@angular/cli": "~14.2.8",
+    "@angular/compiler-cli": "~14.2.9",
+    "@types/jasmine": "~4.3.0",
+    "@types/node": "^18.11.9",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.1",
+    "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.2"
+    "typescript": "~4.8.4"
   }
 }
